# PICADOR-Jr-2025

./: .gitignore  Architecture.md  CMakeLists.txt  Notes.md  PICADOR-Jr-Project.cpp  README.md  Topics.md  main.cpp  Описание метода PIC.docx
Documentation/: Debugging.md  Documentation.md
Documentation/Basic/: Constants.md  Field Container.md  Grid.md  Module.md  PICADOR Jr Core.md  Particle Grid.md  Particle.md  Vector3.md
Documentation/Experiments/: Auto Visualization System.md  Boris Trajectory Experiment.md  Cold Plasma Experiment.md  ColdPlasma_Data_1.xlsx  Particle Generator Experiment.md
Documentation/Modules/: Data Sampler.md  Field Generator.md  Loop Edge Condition.md  Particle Generator.md  Particle Loop Edge Condition.md  Particle Solver.md
Documentation/Report/: Basic Architecture.md  PIC Method.md  Report Plan.md  Архитектура PicadorJr V1.docx  Отчёт PicadorJr V1.docx  Отчёт PicadorJr Кутузов V1.docx
PICADOR-Jr-Project/: CMakeLists.txt  FieldGrid.h  FieldIntegrator.h  Grid.h  Module.h  PICADOR-Jr-Project.cpp  PICADOR-Jr-Project.sln  PICADOR-Jr-Project.vcxproj  PICADOR-Jr-Project.vcxproj.filters  ParticleGrid.h  PicadorJrCore.h  Vector3.h
PICADOR-Jr-Project/Include/: Constants.h  FieldContainer.h  FieldGrid.h  FieldIntegrator.h  FieldLoopEdgeCondition.h  Grid.h  Module.h  Module_CurrentDepositor.h  Module_DataSampler.h  Module_FieldGenerator.h  Module_FieldSolver.h  Module_LoopEdgeCondition.h  Module_ParticleGenerator.h  Particle.h  (+7 more)
Visualization/: BorisConvergence.txt  GraphBuilder.py  Readme.txt  RunGraphBuilder.bat  TrajectoryBuilder.py
(+56 files in other folders)
